background and menu

--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- You can't normally link sass files like here, this is thanks to he magic of
     javascript ✨ -->
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="./styles/index.scss" />
     <title>Vanilla CSS</title>
   </head>
   <body>
     <!-- Your layout here 👇 -->
+    <header>
+      <nav>
+        <div class="office">
+          <p>Offices Co.</p>
+        </div>
+        <ul>
+          <li>Home</li>
+          <li>About</li>
+          <li>Contact</li>
+        </ul>
+      </nav>
+    </header>
+
+    <section>
+      <h1>Welcome to your new office.</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+      <button>Contact us</button>
+    </section>
   </body>
 </html>
