--- a/src/index.html
+++ b/src/index.html
@@ -26,9 +26,11 @@
     </header>
 
     <section>
-      <h1>Welcome to your new office.</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-      <button>Contact us</button>
+      <div class="center">
+        <h1>Welcome to your new office.</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <button>Contact us</button>
+      </div>
     </section>
   </body>
 </html>
